About_me content alignment is corrected

--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ footer {
 .sub-header {
     background-color: #e2e768;
 }
-    .sub-header .content {
+    .content {
         box-sizing: border-box;
         padding-top: 75px;
         padding-left: 20px;
